--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-qunit": "^7.2.0",
     "loader.js": "^4.7.0",
+    "msw": "^0.42.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
     "qunit": "^2.19.1",
@@ -72,5 +73,8 @@
   "dependencies": {
     "ember-concurrency": "^2.2.1",
     "ember-concurrency-async": "^1.0.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
